--- a/manifests/plex/values.yaml
+++ b/manifests/plex/values.yaml
@@ -29,11 +29,13 @@ service:
     main:
         type: LoadBalancer
         loadBalancerIP: 10.0.0.242
+        externalTrafficPolicy: Local
         ports:
             http:
                 port: 32400
                 targetPort: 32400
                 protocol: TCP
+                nodePort: 32400
 
 resources:
     requests:
