Add UDP protocol specification for local discovery in Syncthing deployment

--- a/manifests/syncthing/syncthing-deployment.yaml
+++ b/manifests/syncthing/syncthing-deployment.yaml
@@ -23,6 +23,7 @@ spec:
                       - containerPort: 8384 # Web UI
                       - containerPort: 22000 # Sync
                       - containerPort: 21027 # Local discovery (UDP)
+                        protocol: UDP
                   livenessProbe:
                       httpGet:
                           path: /
