Add AdGuard configuration persistence fix and Jellyfin test deployment scripts

--- a/manifests/adguard/adguard-deployment.yaml
+++ b/manifests/adguard/adguard-deployment.yaml
@@ -35,7 +35,12 @@ spec:
                   volumeMounts:
                       - name: adguard-data
                         mountPath: /opt/adguardhome/work
+                      - name: adguard-config
+                        mountPath: /opt/adguardhome/conf
             volumes:
                 - name: adguard-data
                   persistentVolumeClaim:
                       claimName: adguard-pvc
+                - name: adguard-config
+                  persistentVolumeClaim:
+                      claimName: adguard-config-pvc
