Add PersistentVolumeClaim for Syncthing configuration and update deployment to mount it

--- a/manifests/syncthing/syncthing-deployment.yaml
+++ b/manifests/syncthing/syncthing-deployment.yaml
@@ -46,7 +46,12 @@ spec:
                   volumeMounts:
                       - name: saves
                         mountPath: /data
+                      - name: config
+                        mountPath: /var/syncthing
             volumes:
                 - name: saves
                   persistentVolumeClaim:
                       claimName: syncthing-pvc
+                - name: config
+                  persistentVolumeClaim:
+                      claimName: syncthing-config-pvc
