Update liveness and readiness probes for optimized versions server

--- a/manifests/optimized-versions-server/deployment.yaml
+++ b/manifests/optimized-versions-server/deployment.yaml
@@ -43,16 +43,20 @@ spec:
                           cpu: "1000m"
                   livenessProbe:
                       httpGet:
-                          path: /
+                          path: /statistics
                           port: 3000
-                      initialDelaySeconds: 30
+                      initialDelaySeconds: 45
                       periodSeconds: 30
+                      timeoutSeconds: 5
+                      failureThreshold: 3
                   readinessProbe:
                       httpGet:
-                          path: /
+                          path: /statistics
                           port: 3000
-                      initialDelaySeconds: 10
+                      initialDelaySeconds: 15
                       periodSeconds: 10
+                      timeoutSeconds: 5
+                      failureThreshold: 3
             volumes:
                 - name: cache
                   persistentVolumeClaim:
