--- a/manifests/optimized-versions-server/deployment.yaml
+++ b/manifests/optimized-versions-server/deployment.yaml
@@ -42,18 +42,16 @@ spec:
                           memory: "2Gi"
                           cpu: "1000m"
                   livenessProbe:
-                      httpGet:
-                          path: /statistics
+                      tcpSocket:
                           port: 3000
-                      initialDelaySeconds: 45
+                      initialDelaySeconds: 30
                       periodSeconds: 30
                       timeoutSeconds: 5
                       failureThreshold: 3
                   readinessProbe:
-                      httpGet:
-                          path: /statistics
+                      tcpSocket:
                           port: 3000
-                      initialDelaySeconds: 15
+                      initialDelaySeconds: 10
                       periodSeconds: 10
                       timeoutSeconds: 5
                       failureThreshold: 3
